setup project with dependency injection

--- a/Src/RichillCapital.Texas.Desktop/RichillCapital.Texas.Desktop.csproj
+++ b/Src/RichillCapital.Texas.Desktop/RichillCapital.Texas.Desktop.csproj
@@ -6,11 +6,23 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <StartupObject>RichillCapital.Texas.Desktop.App</StartupObject>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\RichillCapital.Texas.Modules\RichillCapital.Texas.Modules.csproj" />
     <ProjectReference Include="..\RichillCapital.Texas.Persistence\RichillCapital.Texas.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ApplicationDefinition Remove="App.xaml" />
+    <Page Include="App.xaml" />
+    <!--<Content Include="Resources\AppIcon.ico" />-->
+  </ItemGroup>
 </Project>
