--- a/Src/RichillCapital.Texas.Domain/RichillCapital.Texas.Domain.csproj
+++ b/Src/RichillCapital.Texas.Domain/RichillCapital.Texas.Domain.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="RichillCapital.SharedKernel" Version="1.3.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Common\" />
+  </ItemGroup>
+
 </Project>
