--- a/Src/RichillCapital.Texas.Modules/RichillCapital.Texas.Modules.csproj
+++ b/Src/RichillCapital.Texas.Modules/RichillCapital.Texas.Modules.csproj
@@ -5,9 +5,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
+  
   <ItemGroup>
     <ProjectReference Include="..\RichillCapital.Texas.Domain\RichillCapital.Texas.Domain.csproj" />
   </ItemGroup>
-
+  
+  <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+  </ItemGroup>
 </Project>
