--- a/Src/RichillCapital.Texas.Notifications/RichillCapital.Texas.Notifications.csproj
+++ b/Src/RichillCapital.Texas.Notifications/RichillCapital.Texas.Notifications.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="12.3.0" />
-    <PackageReference Include="RichillCapital.SharedKernel" Version="1.3.5" />
+    <ProjectReference Include="..\RichillCapital.Texas.Modules\RichillCapital.Texas.Modules.csproj" />
   </ItemGroup>
+
 </Project>
